changelog/v2.16.0/changelog.md
<p align="center">
  <img src="http://www.mikroe.com/img/designs/beta/logo_small.png?raw=true" alt="MikroElektronika"/>
</p>

---

**[BACK TO MAIN FILE](../../changelog.md)**

---

# `v2.16.0`

+ released: 2025-10-23

## Changes

- [`v2.16.0`](#v2160)
  - [Changes](#changes)
      - [NUVOTON](#nuvoton)
      - [mikroSDK](#mikrosdk)
    - [NEW HARDWARE](#new-hardware)

#### <font color=red>NUVOTON</font>

**M2354 MCUs supported!**

|      MCU     |
|  :---------: |
|  M2354KJFAE  |
|  M2354LJFAE  |
|  M2354SJFAE  |

#### mikroSDK

- Implemented complete HAL/LL support for **Nuvoton M2354** MCU family.
  Includes:
  - GPIO, UART, SPI, I2C, OneWire, ADC, and Timer modules
  - Core initialization and clock configuration
  - Integration with existing mikroSDK build and driver structure

### NEW HARDWARE

> NOTE:
>> If any new hardware was added to current version, it will be listed here.

Support added for following hardware:

+ **[2025-10-24](./new_hw/2025-10-24.md)**
+ **[2025-10-27](./new_hw/2025-10-27.md)**
+ **[2025-10-28](./new_hw/2025-10-28.md)**
+ **[2025-10-29](./new_hw/2025-10-29.md)**
+ **[2025-10-30](./new_hw/2025-10-30.md)**
+ **[2025-10-31](./new_hw/2025-10-31.md)**
+ **[2025-11-03](./new_hw/2025-11-03.md)**
+ **[2025-11-04](./new_hw/2025-11-04.md)**
+ **[2025-11-05](./new_hw/2025-11-05.md)**
+ **[2025-11-06](./new_hw/2025-11-06.md)**
+ **[2025-11-07](./new_hw/2025-11-07.md)**
+ **[2025-11-10](./new_hw/2025-11-10.md)**
+ **[2025-11-11](./new_hw/2025-11-11.md)**
+ **[2025-11-12](./new_hw/2025-11-12.md)**
+ **[2025-11-13](./new_hw/2025-11-13.md)**
+ **[2025-11-14](./new_hw/2025-11-14.md)**
+ **[2025-11-17](./new_hw/2025-11-17.md)**
+ **[2025-11-18](./new_hw/2025-11-18.md)**
+ **[2025-11-19](./new_hw/2025-11-19.md)**
+ **[2025-11-20](./new_hw/2025-11-20.md)**
+ **[2025-11-21](./new_hw/2025-11-21.md)**
+ **[2025-11-24](./new_hw/2025-11-24.md)**
+ **[2025-11-25](./new_hw/2025-11-25.md)**
+ **[2025-11-26](./new_hw/2025-11-26.md)**
+ **[2025-11-27](./new_hw/2025-11-27.md)**
+ **[2025-11-28](./new_hw/2025-11-28.md)**
+ **[2025-12-01](./new_hw/2025-12-01.md)**
+ **[2025-12-02](./new_hw/2025-12-02.md)**
+ **[2025-12-03](./new_hw/2025-12-03.md)**
+ **[2025-12-04](./new_hw/2025-12-04.md)**
+ **[2025-12-05](./new_hw/2025-12-05.md)**
+ **[2025-12-08](./new_hw/2025-12-08.md)**
+ **[2025-12-09](./new_hw/2025-12-09.md)**
+ **[2025-12-10](./new_hw/2025-12-10.md)**
+ **[2025-12-11](./new_hw/2025-12-11.md)**
+ **[2025-12-12](./new_hw/2025-12-12.md)**
+ **[2025-12-15](./new_hw/2025-12-15.md)**
+ **[2025-12-16](./new_hw/2025-12-16.md)**
+ **[2025-12-17](./new_hw/2025-12-17.md)**
+ **[2025-12-18](./new_hw/2025-12-18.md)**
+ **[2025-12-19](./new_hw/2025-12-19.md)**
+ **[2025-12-22](./new_hw/2025-12-22.md)**
+ **[2025-12-23](./new_hw/2025-12-23.md)**
+ **[2025-12-24](./new_hw/2025-12-24.md)**
+ **[2025-12-25](./new_hw/2025-12-25.md)**
+ **[2025-12-26](./new_hw/2025-12-26.md)**
+ **[2025-12-29](./new_hw/2025-12-29.md)**
+ **[2025-12-30](./new_hw/2025-12-30.md)**
+ **[2025-12-31](./new_hw/2025-12-31.md)**
+ **[2026-01-01](./new_hw/2026-01-01.md)**
+ **[2026-01-02](./new_hw/2026-01-02.md)**
+ **[2026-01-05](./new_hw/2026-01-05.md)**
+ **[2026-01-06](./new_hw/2026-01-06.md)**
+ **[2026-01-07](./new_hw/2026-01-07.md)**
+ **[2026-01-08](./new_hw/2026-01-08.md)**
+ **[2026-01-09](./new_hw/2026-01-09.md)**
+ **[2026-01-12](./new_hw/2026-01-12.md)**
+ **[2026-01-13](./new_hw/2026-01-13.md)**
+ **[2026-01-14](./new_hw/2026-01-14.md)**
+ **[2026-01-15](./new_hw/2026-01-15.md)**
+ **[2026-01-16](./new_hw/2026-01-16.md)**
+ **[2026-01-19](./new_hw/2026-01-19.md)**
+ **[2026-01-20](./new_hw/2026-01-20.md)**
+ **[2026-01-21](./new_hw/2026-01-21.md)**
+ **[2026-01-22](./new_hw/2026-01-22.md)**
+ **[2026-01-23](./new_hw/2026-01-23.md)**
+ **[2026-01-26](./new_hw/2026-01-26.md)**
+ **[2026-01-27](./new_hw/2026-01-27.md)**
+ **[2026-01-28](./new_hw/2026-01-28.md)**
+ **[2026-01-29](./new_hw/2026-01-29.md)**
+ **[2026-01-30](./new_hw/2026-01-30.md)**
+ **[2026-02-02](./new_hw/2026-02-02.md)**
+ **[2026-02-03](./new_hw/2026-02-03.md)**
+ **[2026-02-04](./new_hw/2026-02-04.md)**
+ **[2026-02-05](./new_hw/2026-02-05.md)**
+ **[2026-02-06](./new_hw/2026-02-06.md)**
+ **[2026-02-09](./new_hw/2026-02-09.md)**
+ **[2026-02-10](./new_hw/2026-02-10.md)**
+ **[2026-02-11](./new_hw/2026-02-11.md)**

---

**[BACK TO MAIN FILE](../../changelog.md)**

---
