changelog/v2.17.0/changelog.md
<p align="center">
  <img src="http://www.mikroe.com/img/designs/beta/logo_small.png?raw=true" alt="MikroElektronika"/>
</p>

---

**[BACK TO MAIN FILE](../../changelog.md)**

---

# `v2.17.0`

+ released: 2025-11-06

## Changes

- [`v2.17.0`](#v2170)
  - [Changes](#changes)
      - [TOSHIBA](#toshiba)
      - [mikroSDK](#mikrosdk)
    - [NEW HARDWARE](#new-hardware)

#### <font color=red>TOSHIBA</font>

**TMPM4K MCUs supported!**

|       MCU      |
| :------------: |
|  TMPM4KLF10AFG |
|  TMPM4KLF10AUG |
|  TMPM4KLFDAFG  |
|  TMPM4KLFDAUG  |
|  TMPM4KLFWAFG  |
|  TMPM4KLFWAUG  |
|  TMPM4KLFYAFG  |
|  TMPM4KLFYAUG  |
|  TMPM4KMFWAFG  |
|  TMPM4KMFYAFG  |
| TMPM4KNF10ADFG |
|  TMPM4KNF10AFG |
|  TMPM4KNFDADFG |
|  TMPM4KNFDAFG  |
|  TMPM4KNFWADFG |
|  TMPM4KNFWAFG  |
|  TMPM4KNFYADFG |
|  TMPM4KNFYAFG  |

#### mikroSDK

- Implemented complete HAL/LL support for **Toshiba TMPM4K** MCU family.
  Includes:
  - GPIO, UART, SPI, I2C, OneWire, ADC, and Timer modules
  - Core initialization and clock configuration
  - Integration with existing mikroSDK build and driver structure

### NEW HARDWARE

> NOTE:
>> If any new hardware was added to current version, it will be listed here.

Support added for following hardware:

+ **[2025-11-06](./new_hw/2025-11-06.md)**
+ **[2025-11-07](./new_hw/2025-11-07.md)**
+ **[2025-11-10](./new_hw/2025-11-10.md)**
+ **[2025-11-11](./new_hw/2025-11-11.md)**
+ **[2025-11-12](./new_hw/2025-11-12.md)**
+ **[2025-11-13](./new_hw/2025-11-13.md)**
+ **[2025-11-14](./new_hw/2025-11-14.md)**
+ **[2025-11-17](./new_hw/2025-11-17.md)**
+ **[2025-11-18](./new_hw/2025-11-18.md)**
+ **[2025-11-19](./new_hw/2025-11-19.md)**
+ **[2026-02-13](./new_hw/2026-02-13.md)**
+ **[2026-02-16](./new_hw/2026-02-16.md)**
+ **[2026-02-17](./new_hw/2026-02-17.md)**
+ **[2026-02-18](./new_hw/2026-02-18.md)**
+ **[2026-02-19](./new_hw/2026-02-19.md)**
+ **[2026-02-20](./new_hw/2026-02-20.md)**
+ **[2026-02-23](./new_hw/2026-02-23.md)**
+ **[2026-02-24](./new_hw/2026-02-24.md)**

---

**[BACK TO MAIN FILE](../../changelog.md)**

---
